# no-template-haskell

./: ChangeLog.md  README.md  no-template-haskell.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.0.20210422/: no-template-haskell-0.1.0.0-inplace.conf  package.cache
src/: Lib.hs
