cabal-version: 1.12
name:           no-template-haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/parsonsmatt/no-template-haskell#readme>
homepage:       https://github.com/parsonsmatt/no-template-haskell#readme
bug-reports:    https://github.com/parsonsmatt/no-template-haskell/issues
author:         Matt Parsons
maintainer:     parsonsmatt@gmail.com
copyright:      Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/no-template-haskell

library
  exposed-modules:
      Lib
  other-modules:
      Paths_no_template_haskell
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  default-extensions: TemplateHaskell, PartialTypeSignatures
  ghc-options: -Wall
